# advent-of-code

./: .gitignore  README.md  pyproject.toml
2016/day01/: day01.py
2016/day02/: day02.py
2016/day03/: day03.py
2016/day04/: solution.py
2016/day05/: solution.py
2024/day01/: solution.py
2024/day02/: solution.py
2024/day03/: solution.py
2024/day04/: solution.py
2024/day05/: solution.py
2024/day06/: solution.py
2024/day07/: solution.py
elf/: __init__.py  answer.py  config.py  exceptions.py  input.py  messages.py  models.py  pyproject.toml  testing.py  utils.py
elf/cli/: create_day.py  fetch_input.py  main.py  run.py  submit.py  test.py
elf/templates/: args.py  solution_template.py
templates/: solution_template.py
utils/: __init__.py  args.py  create_day.py
