[project]
name = "advent-of-code"
version = "0.1.0"
description = "This repository contains my solutions for the [Advent of Code](https://adventofcode.com/) puzzles across multiple years."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
]
